k8s-dotenv-builder/deploy/kind-smoke/resources.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: review-smoke
  labels:
    app.kubernetes.io/instance: review-env-smoke
    review.my-company.io/export-env: "true"
  annotations:
    review.my-company.io/env-name: API_URL
    review.my-company.io/export-type: route-url
    review.my-company.io/path: /api
spec:
  host: api.review-smoke.localtest.me
  tls:
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui
  namespace: review-smoke
  labels:
    app.kubernetes.io/instance: review-env-smoke
    review.my-company.io/export-env: "true"
  annotations:
    review.my-company.io/env-name: UI_URL
    review.my-company.io/export-type: route-url
spec:
  host: ui.review-smoke.localtest.me
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: review-smoke
  labels:
    app.kubernetes.io/instance: review-env-smoke
    review.my-company.io/export-env: "true"
  annotations:
    review.my-company.io/env-name: KAFKA_BOOTSTRAP_SERVERS
    review.my-company.io/export-type: nodeport-hostport
    review.my-company.io/public-host: nodeport-gw.review.example.com
spec:
  type: NodePort
  selector:
    app: kafka-placeholder
  ports:
    - name: tcp-kafka
      port: 9092
      targetPort: 9092
      nodePort: 32110
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-external
  namespace: review-smoke
  labels:
    app.kubernetes.io/instance: review-env-smoke
    review.my-company.io/export-env: "true"
  annotations:
    review.my-company.io/env-name: MONGODB_HOSTPORT
    review.my-company.io/export-type: nodeport-hostport
    review.my-company.io/public-host: nodeport-gw.review.example.com
spec:
  type: NodePort
  selector:
    app: mongodb-placeholder
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      nodePort: 32217
---
apiVersion: v1
kind: Service
metadata:
  name: internal-api
  namespace: review-smoke
  labels:
    app.kubernetes.io/instance: review-env-smoke
spec:
  type: ClusterIP
  selector:
    app: internal-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
